[BUGFIX] Remove padding for selects
Task #55319 introduced a padding for selects,
which looks ugly in Internet Explorer and Firefox.

Resolves: #55510
Related: #55319
Releases: 6.2
Reviewed-on: https://review.typo3.org/27190
Tested-by: Stefan Froemken
Tested-by: Marcel Wieser
Tested-by: Marcin Sągol
Tested-by: Benjamin Mack

--- a/typo3/sysext/t3skin/Resources/Public/Css/structure/main_form.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/structure/main_form.css
@@ -13,7 +13,6 @@ form {
 .t3-button,
 input,
 textarea,
-select,
 button {
 	padding: 3px 6px;
 	margin: 0 0.5em 0.5em 0;
